--- a/app/src/main/res/xml/network_securiti_config.xml
+++ b/app/src/main/res/xml/network_securiti_config.xml
@@ -6,4 +6,10 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.8</domain>
     </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">192.168.100.9</domain>
+    </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">192.168.43.142</domain>
+    </domain-config>
 </network-security-config>
