--- a/app/src/main/res/xml/network_securiti_config.xml
+++ b/app/src/main/res/xml/network_securiti_config.xml
@@ -12,4 +12,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.43.142</domain>
     </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">192.168.100.5</domain>
+    </domain-config>
 </network-security-config>
